--- a/alunos/css/verAluno.css
+++ b/alunos/css/verAluno.css
@@ -470,6 +470,21 @@ body {
     filter: brightness(0.96);
 }
 
+.btn-download {
+    display: inline-block;
+    padding: 10px 14px;
+    background-color: #1aa179;
+    color: #fff;
+    text-decoration: none;
+    border-radius: 6px;
+    font-weight: 500;
+}
+
+.btn-download:hover {
+    background-color: #148e69;
+}
+
+
 /* ======= RESPONSIVIDADE ======= */
 @media (max-width: 1024px) {
     #header {
